--- a/common/styles/pages/Gradients.module.scss
+++ b/common/styles/pages/Gradients.module.scss
@@ -44,8 +44,7 @@
   .gradients-list {
     @apply
       flex flex-col gap-y-5
-      sm:grid sm:grid-cols-2 sm:gap-x-3
-      md:grid-cols-3 md:gap-x-6
-      hoverable:md:gap-x-8;
+      sm:grid sm:grid-cols-2 sm:gap-x-5
+      md:grid-cols-3 md:gap-6;
   }
 }
